[package]
name = "s3_tables_ex"
version = "0.1.0"
edition = "2021"

[lib]
name = "s3_tables_ex"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.2"
tokio = { version = "1.47", features = ["rt-multi-thread", "time"] }
iceberg = "=0.9.1"
iceberg-catalog-s3tables = "=0.9.1"
arrow-json = "57.1"
arrow-schema = "57.1"
parquet = "57.1"
uuid = { version = "1", features = ["v4"] }
